--- a/class/checkpoint1/css/styles.css
+++ b/class/checkpoint1/css/styles.css
@@ -7,12 +7,24 @@ img {
     width: 100%;
 }
 
-.title, .contact, .name {
+.name {
     text-align: center;
+    font-family: sans-serif;
+}
+
+.title {
+    text-align: center;
+    font-style: italic;
+    font-family: sans-serif;
 }
 
 .contact {
-    font-style: italic;
+    text-align: center;
+}
+
+#wapo {
+    background-color:darkblue;
+
 }
 
 .experience{
