--- a/class/checkpoint1/css/styles.css
+++ b/class/checkpoint1/css/styles.css
@@ -38,16 +38,16 @@ img {
 }
 
 .h3 {
-    font-family:
+    font-family:sans-serif; Montserrat;
 }
 
 .h4 {
-    font-family:
+    font-family:sans-serif; Montserrat;
 }
 
 .h5 {
     font-family:
-    font-style: italic;
+    font-family:sans-serif; Montserrat;
 }
 
 .
