--- a/class/checkpoint1/css/styles.css
+++ b/class/checkpoint1/css/styles.css
@@ -1,5 +1,7 @@
 h1 {
     color: #33485e;
+    font-family: sans-serif;
+    font-family: sans-serif; Raleway;
 }
 
 img {
@@ -18,7 +20,7 @@ h2 {
 
 .name {
     text-align: center;
-    font-family: sans-serif;Raleway;
+    font-family: sans-serif; Raleway;
 }
 
 .title {
