--- a/class/checkpoint1/css/styles.css
+++ b/class/checkpoint1/css/styles.css
@@ -1,12 +1,13 @@
 h1 {
     color: #33485e;
     font-family: sans-serif;
-    font-family: sans-serif; Raleway;
+    font-family: sans-serif; opensans;
 }
 
 img {
     max-width: 400px;
     width: 70%;
+    align: right;
 }
 
 h2 {
@@ -20,7 +21,7 @@ h2 {
 
 .name {
     text-align: center;
-    font-family: sans-serif; Raleway;
+    font-family: sans-serif; opensans;
 }
 
 .title {
