--- a/class/checkpoint1/css/styles.css
+++ b/class/checkpoint1/css/styles.css
@@ -15,6 +15,18 @@ h2 {
     background-color: #33485e;
 }
 
+h3 {
+    font-family:sans-serif;
+}
+
+h4 {
+    font-family:sans-serif;
+}
+
+h5 {
+    font-family: sans-serif;
+}
+
 .photo {
     align: right;
     max-width: 400px;
@@ -46,20 +58,6 @@ h2 {
     color: #ffffff;
     background-color: #33485e;
     font-family: sans-serif;
-
-}
-
-.h3 {
-    font-family:sans-serif;
-}
-
-.h4 {
-    font-family:sans-serif;
-}
-
-.h5 {
-    font-family: sans-serif;
-}
 
 .jobdescrip {
 
