--- a/class/checkpoint1/css/styles.css
+++ b/class/checkpoint1/css/styles.css
@@ -8,7 +8,7 @@ img {
     align: right;
     max-width: 300px;
     width: 50%;
-    margin-right: 10px
+    margin-right: 10px;
 }
 
 h2 {
@@ -32,7 +32,7 @@ h5 {
     align: right;
     max-width: 300px;
     width: 50%;
-    margin-right: 10px
+    margin-right: 10px;
 }
 
 .name {
