--- a/class/checkpoint1/css/styles.css
+++ b/class/checkpoint1/css/styles.css
@@ -63,13 +63,14 @@ img {
 }
 
 .h3 {
-    font-family:sans-serif;
+    font-family: sans-serif;
 }
 
 .h4 {
-    font-family:sans-serif;
+    font-family: sans-serif;
 }
 
 .h5 {
-    font-family: sans-serif;
+    font-family:sans-serif;
+    font-style: italic;
 }
