--- a/class/checkpoint1/css/styles.css
+++ b/class/checkpoint1/css/styles.css
@@ -45,7 +45,7 @@ img {
     font-family:sans-serif;
 
 .jobdescrip {
-    
+
 }
 
 .jobplace {
@@ -57,20 +57,20 @@ img {
 
 }
 
-.h2 {
+h2 {
     color: #FFFFFF;
     background-color: #33485e;
 }
 
-.h3 {
+h3 {
     font-family: sans-serif;
 }
 
-.h4 {
+h4 {
     font-family: sans-serif;
 }
 
-.h5 {
+h5 {
     font-family:sans-serif;
     font-style: italic;
 }
