--- a/class/checkpoint1/css/styles.css
+++ b/class/checkpoint1/css/styles.css
@@ -1,6 +1,6 @@
 h1 {
     color: #33485e;
-    font-family: sans-serif;
+    font-family: font-family: 'Montserrat', sans-serif;font-weight: 100;
     text-align: center;
 }
 
@@ -16,11 +16,6 @@ img {
     max-width: 300px;
     width: 50%;
     margin-right: 10px;
-}
-
-.name {
-    text-align: center;
-    font-family: sans-serif;
 }
 
 .title {
