--- a/class/checkpoint1/css/styles.css
+++ b/class/checkpoint1/css/styles.css
@@ -1,6 +1,6 @@
 h1 {
     color: #33485e;
-    font-family: font-family: 'Montserrat', sans-serif;font-weight: 100;
+    font-family: 'Montserrat', sans-serif;font-weight: 100;
     text-align: center;
 }
 
