--- a/class/checkpoint1/css/styles.css
+++ b/class/checkpoint1/css/styles.css
@@ -37,7 +37,7 @@ img {
 .experience, .education, .skills {
     color: #ffffff;
     background-color: #33485e;
-    font-family: 'Nunito Sans', sans-serif;font-weight: 100;
+    font-family: 'Montserrat', sans-serif;font-weight: 300;
 }
 
 
