--- a/class/checkpoint1/css/styles.css
+++ b/class/checkpoint1/css/styles.css
@@ -60,7 +60,5 @@ h5 {
 }
 
 .firstjob{
-    display: block; margin-after: 0.5em; margin-start: auto; margin-end: auto; overflow: hidden; border-style: solid;; border-width: 1px;}
-
-
+border-bottom: 1px solid black;
 }
