--- a/class/checkpoint1/css/styles.css
+++ b/class/checkpoint1/css/styles.css
@@ -29,7 +29,7 @@ img {
     text-align: center;
     font-style:italic;
     font-family: sans-serif;
-    border-bottom: 1px solid black; width: 50%; align: center; 
+    border-bottom: 1px solid black; align: center;
 }
 
 .contact {
