--- a/class/flexbox-exercises/exercise-5/style.css
+++ b/class/flexbox-exercises/exercise-5/style.css
@@ -14,4 +14,7 @@ img:first-of-type {
 .container {
 	border: 5px solid #ffcc5c;
 	min-height: 300px;
+	display: flex;
+	align-items: baseline;
+	justify-content: center;
 }
