--- a/class/flexbox-exercises/exercise-6/style.css
+++ b/class/flexbox-exercises/exercise-6/style.css
@@ -9,6 +9,13 @@ img:first-of-type {
 
 .container {
 	border: 5px solid #ffcc5c;
+	display: flex;
+	flex-direction: column;
+}
+@media only screen and (min-width: 600px) {
+	.container {
+
+	}
 }
 
 .container div {
@@ -16,10 +23,13 @@ img:first-of-type {
 
 /* Reorder the divs to match the picture */
 .container div:nth-of-type(1) {
+
 }
 
 .container div:nth-of-type(2) {
+	order: 0;
 }
 
 .container div:nth-of-type(3) {
+
 }
