--- a/class/checkpoint1/css/styles.css
+++ b/class/checkpoint1/css/styles.css
@@ -69,7 +69,8 @@ h4 {
 }
 
 h5 {
-    font-family: 'Montserrat', sans-serif;font-weight: 100;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 100;
     font-style: italic;
     margin: 0;
    padding: 0;
